--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "build": "vite build && cp -r public/build/* public/",
+        "dev": "vite",
+        "vercel-build": "vite build && cp -r public/build/* public/"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
