Implement messaging features and enhance course resource display
- Added inbox, sent, create, store, show, reply, destroy, updateStatus, search, and sendFromCourse methods in MessageController for comprehensive message management.
- Improved message validation and user permissions for secure message handling.
- Enhanced course resource display in the player view with improved styling and a contact instructor section for better user interaction.
- Updated Vercel configuration to streamline PHP runtime usage.

--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,7 @@
     },
     {
       "src": "public/index.php",
-      "use": "@vercel/php",
-      "config": {
-        "runtime": "vercel-php@0.6.0"
-      }
+      "use": "vercel-php@0.6.0"
     }
   ],
   "routes": [
