Simplify Vercel configuration for PHP-only deployment

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build && cp -r public/build/* public/",
-        "dev": "vite",
-        "vercel-build": "vite build && cp -r public/build/* public/"
+        "build": "vite build",
+        "dev": "vite"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
