--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "functions": {
-    "public/index.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  },
+  "version": 2,
   "routes": [
     {
       "src": "/(.*)",
